--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "auth-module",
+  "name": "project_generator",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "npm install && nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -27,13 +27,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-easy-zip": "^1.1.5",
-    "express-zip": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "jszip": "^3.5.0",
     "mongoose": "^5.9.1",
+    "now": "^20.1.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   }
 }
